<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_info_outline_white_24px"
        android:title="@string/action_about"
        android:orderInCategory="100" android:showAsAction="always|collapseActionView" />

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_outline_white_24px"
        android:title="@string/action_add"
        android:orderInCategory="100" android:showAsAction="always|collapseActionView" />

    <group android:id="@+id/sort_group" android:checkableBehavior="single">
        <item android:id="@+id/sort_az"
            android:title="@string/sort_az"
            android:orderInCategory="100" android:showAsAction="ifRoom" />
        <item android:id="@+id/sort_za"
            android:title="@string/sort_za"
            android:orderInCategory="100" android:showAsAction="ifRoom" />
    </group>
</menu>